--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=NotoSans">
+    <link rel="stylesheet" href="./styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
@@ -18,7 +17,7 @@
     <div class="container-fluid" id="contentBody">
         <!-- Profile Image and Contacts -->
         <div class="container mt-5 mb-2" id="profile" style="text-align: center;">
-            <img src="/assets/profile-photo.png" alt="profile photo" style="max-height: 7rem;">
+            <img src="./assets/profile-photo.png" alt="profile photo" style="max-height: 7rem;">
             <h1 id="personalName">Quang Du</h1>
             <div id="contactInfo">
                 <a href="https://www.linkedin.com/in/quang-du-a45617128/" class="link-dark" target="_blank">LinkedIn</a>
@@ -34,14 +33,14 @@
             <div class="row mt-2">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-4 box">
-                    <img src="/assets/omega logo.png" alt="" style="max-height: 7rem;">
+                    <img src="./assets/omega logo.png" alt="" style="max-height: 7rem;">
                     <h3>Omega 365</h3>
                     <h6>Software Engineer</h6>
                     <p>May 2023 - January 2024, Houston, TX</p>
                     <button type="button" class="btn btn-sm btn-primary">More info</button>
                 </div>
                 <div class="col-sm-4 box">
-                    <img src="/assets/2019_HCA_logo.svg.png" alt="HCA Healthcare Inc. Logo" style="max-height: 7rem;">
+                    <img src="./assets/2019_HCA_logo.svg.png" alt="HCA Healthcare Inc. Logo" style="max-height: 7rem;">
                     <h3>HCA Healthcare Inc.</h3>
                     <h6>Laboratory Scientist</h6>
                     <p>November 2019 - Feburary 2022, Pasadena, TX</p>
